--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,10 +11,12 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "nodemailer": "^6.9.7",
     "socket.io": "^4.8.1",
-    "ws": "^8.18.3",
-    "cors": "^2.8.5"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
